--- a/Business_Solutions/templates/inventory/sales/saleDetails.html
+++ b/Business_Solutions/templates/inventory/sales/saleDetails.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <table class="table">
+                    <table class="table border">
                         <thead class="sticky-top table-secondary">
                             <tr>
                                 <th scope="col">Product</th>
