--- a/Business_Solutions/templates/inventory/inventoryList.html
+++ b/Business_Solutions/templates/inventory/inventoryList.html
@@ -52,45 +52,49 @@
                 
             </div>
         </div>
-        <div class="card-body p-0 ps-3 pe-3 overflow-scroll">
-            <table class="table table-bordered border-warning">
+        <div class="card-body p-0 overflow-scroll">
+            <table class="table table-striped">
                 <thead class="table-secondary sticky-top">
                     <tr>
-                        <th scope="col">Product Name</th>
-                        <th scope="col" class="text-center">Brand</th>
-                        <th scope="col" class="text-center">Category</th>
-                        <th scope="col" class="text-center">Status</th>
-                        <th scope="col" class="text-center">Quantity</th>
-                        <th scope="col" class="text-center">Price per unit.</th>
-                        <th scope="col" class="text-center">Cost per unit.</th>
-                        <th scope="col" class="text-center">Option</th>
+                        <th scope="col" class="ps-3 align-middle">Product Name</th>
+                        <th scope="col" class="text-center align-middle">Brand</th>
+                        <th scope="col" class="text-center align-middle">Category</th>
+                        <th scope="col" class="text-center align-middle">Status</th>
+                        <th scope="col" class="text-center align-middle">Quantity</th>
+                        <th scope="col" class="text-center align-middle">Price(BDT)</th>
+                        <th scope="col" class="text-center align-middle">Cost(BDT)</th>
+                        <th scope="col" class="pe-3 text-center align-middle">Option</th>
                     </tr>
                 </thead>
                 <tbody>
                     {%for inventory in inventories%}
                     <tr>
-                        <td><a href="{%url 'inventory-details' inventory.id%}">{{inventory.product}}</a></td>
-                        <td class="text-center">{{inventory.product.brand}}</td>
-                        <td class="text-center">{{inventory.product.category}}</td>
-                        <td class="text-center">
+                        <td class="ps-3 align-middle"><a href="{%url 'inventory-details' inventory.id%}">{{inventory.product}}</a></td>
+                        <td class="text-center align-middle">
+                            <div>
+                                {{inventory.product.brand}}
+                            </div>
+                        </td>
+                        <td class="text-center align-middle">{{inventory.product.category}}</td>
+                        <td class="text-center align-middle">
                             {%if inventory.quantity < 5 and inventory.quantity > 0 %}
-                                <button class="alert alert-warning p-0 ps-1 pe-1 m-0 width-auto">Running out</button>
+                                <button class="alert alert-warning p-0 ps-1 pe-1 m-0 width-auto">Low</button>
                             {%elif inventory.quantity == 0%}
-                                <button class="alert alert-danger p-0 ps-1 pe-1 m-0 width-auto">Out of stock</button>
+                                <button class="alert alert-danger p-0 ps-1 pe-1 m-0 width-auto">Stock out</button>
                             {%else%}
                                 <button class="alert alert-success p-0 ps-1 pe-1 m-0 width-auto">Available</button>
                             {%endif%} 
                         </td>
-                        <td class="text-center"><div class="alert alert-info fw-bold p-0 m-0 width-auto">{{inventory.quantity}}</div></td>
+                        <td class="text-center align-middle"><div class="alert alert-info fw-bold p-0 m-0 width-auto">{{inventory.quantity}}</div></td>
                         {%if inventory.unit_price%}
-                        <td class="text-center text-success">{{inventory.unit_price}} BDT</td>
+                        <td class="text-center align-middle text-success">{{inventory.unit_price}}</td>
                         {%else%}
-                        <td class="text-center">
+                        <td class="text-center align-middle">
                             <a href="{%url 'inventory-setPrice' inventory.id%}" class="btn btn-sm btn-outline-success">Set Price</a>
                         </td>
                         {%endif%}
-                        <td class="text-center text-danger">{{ inventory.unit_cost }} BDT</td>
-                        <td class="text-center"><a href="{%url 'inventory-details' inventory.id%}" class="btn btn-sm btn-outline-secondary">Details</a></td>
+                        <td class="text-center align-middle text-danger">{{ inventory.unit_cost }}</td>
+                        <td class="pe-3 text-center align-middle"><a href="{%url 'inventory-details' inventory.id%}" class="btn btn-sm btn-outline-secondary">Details</a></td>
                       </tr>
                     {%endfor%}
                 </tbody>
