--- a/Business_Solutions/templates/inventory/product/productList.html
+++ b/Business_Solutions/templates/inventory/product/productList.html
@@ -51,27 +51,27 @@
                 </form>
             </div>
         </div>
-        <div class="card-body p-0 ps-3 pe-3 overflow-scroll">
-            <table class="table table-bordered border-warning">
+        <div class="card-body p-0 overflow-scroll">
+            <table class="table table-striped">
                 <thead class="table-secondary sticky-top">
                     <tr>
-                        <th scope="col">Product Name</th>
-                        <th scope="col" class="text-center">Brand</th>
-                        <th scope="col" class="text-center">Category</th>
-                        <th scope="col" class="text-center">Price</th>
-                        <th scope="col" class="text-center">Cost</th>
-                        <th scope="col" class="text-center">Details</th>
+                        <th scope="col" class="ps-3 align-middle">Product Name</th>
+                        <th scope="col" class="text-center align-middle">Brand</th>
+                        <th scope="col" class="text-center align-middle">Category</th>
+                        <th scope="col" class="text-center align-middle">Price(BDT)</th>
+                        <th scope="col" class="text-center align-middle">Cost(BDT)</th>
+                        <th scope="col" class="pe-3 text-center align-middle">Details</th>
                     </tr>
                 </thead>
                 <tbody>
                     {%for product in products%}
                     <tr>
-                        <td><a href="{%url 'product-details' product.id%}">{{product}}</a></td>
-                        <td class="text-center">{{product.brand}}</td>
-                        <td class="text-center">{{product.category}}</td>
-                        <td class="text-center">{{product.price}} BDT</td>
-                        <td class="text-center">{{product.cost}} BDT</td>
-                        <td class="text-center"><a href="{%url 'product-details' product.id%}" class="btn btn-sm btn-outline-secondary">Details</a></td>
+                        <td class="ps-3 align-middle"><a href="{%url 'product-details' product.id%}">{{product}}</a></td>
+                        <td class="text-center align-middle">{{product.brand}}</td>
+                        <td class="text-center align-middle">{{product.category}}</td>
+                        <td class="text-center align-middle">{{product.price}}</td>
+                        <td class="text-center align-middle">{{product.cost}}</td>
+                        <td class="pe-2 text-center align-middle"><a href="{%url 'product-details' product.id%}" class="btn btn-sm btn-outline-secondary">Details</a></td>
                       </tr>
                     {%endfor%}
                 </tbody>
