--- a/Business_Solutions/templates/inventory/brand/brandList.html
+++ b/Business_Solutions/templates/inventory/brand/brandList.html
@@ -15,10 +15,7 @@
 
     <div class="card height-100">
         <div class="sticky-top bg-white">
-            <div class="card-header d-flex justify-content-between align-items-center position-relative">
-                <a href="{%url 'inventory'%}" class="btn-back">
-                    <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
-                </a>
+            <div class="card-header d-flex justify-content-end align-items-center position-relative">
                 <div class="fs-5 fw-bold text-center position-absolute top-50 start-50 translate-middle"">Brands</div>
                 <a href="{%url 'create-brand'%}" class="btn btn-success btn-sm">Add brand</a>
             </div>
