--- a/Business_Solutions/templates/suppliers/supplierList.html
+++ b/Business_Solutions/templates/suppliers/supplierList.html
@@ -15,8 +15,8 @@
 <div class="supplier">
     
     <div class="card height-100">
-        <div class="card-header d-flex justify-content-between align-items-center">
-            <div class="fs-4 fw-bold">Suppliers</div>
+        <div class="card-header d-flex justify-content-end align-items-center position-relative">
+            <div class="fs-4 fw-bold position-absolute top-50 start-50 translate-middle">Suppliers</div>
             <a href="{%url 'create-supplier'%}" class="btn btn-sm btn-success">Add Supplier</a>
         </div>
         <div class="card-header d-flex justify-content-end align-items-center">
