--- a/Business_Solutions/templates/Layout.html
+++ b/Business_Solutions/templates/Layout.html
@@ -16,6 +16,7 @@
     {%block link%}{%endblock link%}
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <link rel="stylesheet" href="{% static 'css/layout.css'%}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js" integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
