--- a/Business_Solutions/templates/inventory/category/allcategory.html
+++ b/Business_Solutions/templates/inventory/category/allcategory.html
@@ -15,11 +15,8 @@
 
     <div class="card height-100">
         <div class="sticky-top bg-white">
-            <div class="card-header d-flex justify-content-between align-items-center">
-                <a href="{%url 'inventory'%}" class="btn-back">
-                    <img src="{%static 'icons/inventory/back.png'%}" width="20" alt=""/>
-                </a>
-                <div class="fs-5 fw-bold text-center">Categories</div>
+            <div class="card-header d-flex justify-content-end align-items-center position-relative">
+                <div class="fs-5 fw-bold position-absolute top-50 start-50 translate-middle">Categories</div>
                 <a href="{%url 'create-category'%}" class="btn btn-success btn-sm">Add Category</a>
             </div>
             <div class="card-header">
