--- a/Business_Solutions/templates/inventory/product/productList.html
+++ b/Business_Solutions/templates/inventory/product/productList.html
@@ -63,7 +63,7 @@
                 <tbody>
                     {%for product in products%}
                     <tr>
-                        <td class="ps-3 align-middle"><a href="{%url 'product-details' product.id%}">{{product}}</a></td>
+                        <td class="ps-3 align-middle"><a href="{%url 'product-details' product.id%}" class="text-primary">{{product}}</a></td>
                         <td class="text-center align-middle">{{product.brand}}</td>
                         <td class="text-center align-middle">{{product.category}}</td>
                         <td class="text-center align-middle">{{product.price}}</td>
