--- a/Business_Solutions/templates/dashboard/dashboard.html
+++ b/Business_Solutions/templates/dashboard/dashboard.html
@@ -13,6 +13,10 @@
 
 <div class="card height-100 p-4 overflow-scroll">
 
+  {%for each in monthly_purchase%}
+    {{each.paid_ammount}}
+  {%endfor%}
+
   <div class="row gap-3">
     <div class="row gap-3">
       <div class="col card bg-dark bg-opacity-10">
@@ -71,7 +75,7 @@
       </div>
       <div class="col card bg-dark bg-opacity-10">
         <div class="card-body d-flex flex-column justify-content-between align-items-center">
-          <div class="fw-bold fs-5">This week sales and purchase</div>
+          <div class="fw-bold fs-5">This month sales</div>
           <div class="mt-2 width-100">
             <canvas id="salePurchaseChart"></canvas>
           </div>
@@ -122,6 +126,7 @@
         const ctx = document.getElementById('topSellChart');
         const ctx2 = document.getElementById('salePurchaseChart')
         const ctx3 = document.getElementById('tobBrandChart')
+
         new Chart(ctx, {
           type: 'pie',
           data: {
@@ -156,13 +161,20 @@
         new Chart(ctx2,{
           type: 'bar',
           data: {
-            labels: ["Fahim","Tanvir","Mahmud","Rumki","Mehedi","Wasfi"],
+            labels: [
+              {%for each in monthly_sales%}
+                '{{each.sales_date|date:"l"}}',
+              {%endfor%}
+            ],
             datasets: [{
               barPercentage: 0.5,
-              maxBarThickness: 30,
               minBarLength: 2,
               label: 'sales',
-              data: [65, 59, 80, 81, 56, 55, 40],
+              data: [
+              {%for each in monthly_sales%}
+                {{each.amount}},
+              {%endfor%}
+              ],
               backgroundColor: [
                 'rgba(255, 99, 132)',
                 'rgba(255, 159, 64)',
@@ -183,32 +195,6 @@
               ],
               borderWidth: 1
             },
-            {
-              barPercentage: 0.5,
-              maxBarThickness: 30,
-              minBarLength: 2,
-              label: 'Purchase',
-              data: [65, 59, 80, 81, 56, 55, 40],
-              backgroundColor: [
-                'rgba(255, 99, 132)',
-                'rgba(255, 159, 64)',
-                'rgba(255, 205, 86)',
-                'rgba(75, 192, 192)',
-                'rgba(54, 162, 235)',
-                'rgba(153, 102, 255)',
-                'rgba(201, 203, 207)'
-              ],
-              borderColor: [
-                'rgb(255, 99, 132)',
-                'rgb(255, 159, 64)',
-                'rgb(255, 205, 86)',
-                'rgb(75, 192, 192)',
-                'rgb(54, 162, 235)',
-                'rgb(153, 102, 255)',
-                'rgb(201, 203, 207)'
-              ],
-              borderWidth: 1
-            }
           ]
           },
           options: {
@@ -241,13 +227,13 @@
               {%endfor%}
               ],
               backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(255, 159, 64, 0.2)',
-                'rgba(255, 205, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(201, 203, 207, 0.2)'
+                'rgba(255, 99, 132)',
+                'rgba(255, 159, 64)',
+                'rgba(255, 205, 86)',
+                'rgba(75, 192, 192)',
+                'rgba(54, 162, 235)',
+                'rgba(153, 102, 255)',
+                'rgba(201, 203, 207)'
               ],
               borderColor: [
                 'rgb(255, 99, 132)',
