--- a/Business_Solutions/static/css/inventory.css
+++ b/Business_Solutions/static/css/inventory.css
@@ -67,3 +67,21 @@ ul{
     height: 400px;
     overflow-y: auto;
 }
+
+
+.img-sec{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
+.img-sec img{
+    width: 100%;
+    border: 3px solid rgb(202, 202, 202);
+    border-radius: 10px;
+}
+
+.info-box{
+    padding: .6rem;
+    border-radius: 8px;
+    background-color: rgba(202, 202, 202, 0.878);
+}
