--- a/Business_Solutions/templates/Layout.html
+++ b/Business_Solutions/templates/Layout.html
@@ -120,18 +120,21 @@
             </div>
         </div>
         <div class="content">
-            <nav class="navbar navbar-light bg-white navbar-w">
+            <nav class="navbar navbar-light navbar-w bg-white p-0">
                 <div class="container-fluid">
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-warning" type="submit">Search</button>
+                        <button class="btn btn-outline-secondary" type="submit">Search</button>
                     </form>
                     <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Admin
+                        <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="text-end text-black me-1">
+                                <div class="fw-bold">{{request.user.first_name}} {{request.user.last_name}}</div>
+                                <div class="text-primary">Admin</div>
+                            </div>
                         </a>
-                        <div class="dropdown-menu right-100 translate-middle-x" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="{%url 'profile' request.user.id%}">
                                 <img src="{% static 'icons/nav/profile.png'%}" width="23" alt="Profile"/>
                                 Profile
                             </a>
