--- a/Business_Solutions/templates/profile/pictureRemove.html
+++ b/Business_Solutions/templates/profile/pictureRemove.html
@@ -1,7 +1,7 @@
 {% extends "Layout.html" %}
 {% load static %}
 
-{%block title%} Update Profile | Amar Shop{%endblock title%}
+{%block title%}Inventory | Amar Shop{%endblock title%}
 
 {%block link%}
     <link rel="stylesheet" href="{%static 'css/inventory.css'%}">
