--- a/Business_Solutions/static/css/inventory.css
+++ b/Business_Solutions/static/css/inventory.css
@@ -71,17 +71,47 @@ ul{
 
 .img-sec{
     width: 100%;
-    height: 300px;
+    max-height: 300px;
+    border: 3px solid rgb(202, 202, 202);
+    border-radius: 10px;
     overflow: hidden;
 }
 .img-sec img{
     width: 100%;
-    border: 3px solid rgb(202, 202, 202);
-    border-radius: 10px;
+    height: auto;
 }
 
 .info-box{
     padding: .6rem;
     border-radius: 8px;
     background-color: rgba(202, 202, 202, 0.878);
+}
+
+
+
+.custom-file-container {
+    border: 2px dotted #818181;
+    border-radius: 10px;
+    width: 350px;
+    height: 350px;
+    display: inline-block;
+}
+
+
+.custom-file-label {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transition: all .2s ease;
+}
+.custom-file-label:hover{
+    background-color: #cfcfcf;
+}
+
+.custom-file-input {
+    display: none;
 }
