--- a/Business_Solutions/templates/profile/pictureRemove.html
+++ b/Business_Solutions/templates/profile/pictureRemove.html
@@ -11,16 +11,22 @@
 <!-- main body -->
 {%block main%}
 
-<div class="card height-100">
-    <div class="card-body">
-        <form method="post" enctype="multipart/form-data">
-            {%csrf_token%}
-            {{form.as_p}}
-            <div>
-                <a href="{%url 'profile' request.user.id%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
-                <button class="btn btn-sm btn-success">Save</button>
-            </div>
-        </form>
+<div class="card height-100 d-flex justify-content-center align-items-center">
+    <div class="card">
+        <div class="card-header fw-bold fs-5 text-center text-danger">Are you sure to remove your profile picture?</div>
+        <div class="card-body">
+            <form method="post" enctype="multipart/form-data">
+                {%csrf_token%}
+                <!-- {{form.as_p}} -->
+                <div class="rmv-img d-flex justify-content-center align-items-center">
+                    <img src="{{profile.profile_pic.url}}" width="300" alt="Profile Picture"/>
+                </div>
+                <div class="text-center mt-3">
+                    <a href="{%url 'profile' request.user.id%}" class="btn btn-sm btn-outline-secondary">Cancel</a>
+                    <button class="btn btn-sm btn-danger">Remove</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
