--- a/Business_Solutions/static/css/inventory.css
+++ b/Business_Solutions/static/css/inventory.css
@@ -115,3 +115,15 @@ ul{
 .custom-file-input {
     display: none;
 }
+
+.rmv-img{
+    width: 50%;
+    max-height: 300px;
+    border: 3px solid rgb(202, 202, 202);
+    border-radius: 10px;
+    overflow: hidden;
+}
+.rmv-img img{
+    width: 100%;
+    height: auto;
+}
