--- a/Business_Solutions/templates/authentication/password_reset_confirm.html
+++ b/Business_Solutions/templates/authentication/password_reset_confirm.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login | Amar Shop</title>
+    <title> Password Reset Confirm | Amar Shop</title>
     
     {% load bootstrap5 %}
     {% bootstrap_css %}
@@ -23,22 +23,14 @@
             <div class="position-absolute top-0 mt-5 branding fs-2 fw-bold"><span class="gedget">Amar</span> Shop</div>
             <div class="w-full m-5">
                 <div class="text-center">
-                    <div class="mt-5 fs-6 fw-semibold text-success">Admin login</div>
+                    <div class="mt-5 fs-6 fw-semibold text-primary">Reset Password</div>
                 </div>
                 <div class="card-body">
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        {{form.as_p}}
                         <div class="mt-3 d-flex flex-column">
-                            <div class="mb-2 d-flex justify-content-between align-items-center">
-                                <div class="form-group form-check">
-                                    <input type="checkbox" class="form-check-input" id="rememberMe">
-                                    <label class="form-check-label" for="rememberMe">Remember Me</label>
-                                </div>
-                                <a href="{%url 'password_reset'%}" class="text-primary">Forget Password?</a>
-                            </div>
-                            <button class="btn btn-success" type="submit">Login</button>
-                            <a href="{%url 'admin-signup'%}" class="mt-3 text-center text-primary">Create an admin account</a>
+                            <button class="btn btn-success" type="submit">Save Password</button>
                         </div>
                     </form>
                 </div>
@@ -50,7 +42,7 @@
             <div class="z-index d-flex flex-column justify-content-center align-items-center">
                 <div class="fw-bold fs-2 text-white">Welcome to <span class="branding fs-2"><span class="gedget">Amar</span> Shop</span></div>
                 <div class="mt-2 text-center fs-5 fw-medium">Admin Panel</div>
-                <div class="mt-2 text-center fs-6 fw-lighter">Please log in to manage your online store</div>
+                <div class="mt-2 text-center fs-6 fw-lighter">Please set your new password.</div>
                 <button type="button" class="btn btn-outline-warning mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal">Watch Demo</button>
             </div>
         </div>
