--- a/Business_Solutions/templates/authentication/singup.html
+++ b/Business_Solutions/templates/authentication/singup.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login | Amar Shop</title>
+    <title>Admin Signup | Amar Shop</title>
     
     {% load bootstrap5 %}
     {% bootstrap_css %}
